--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "ncp": "^2.0.0",
+    "replace-in-files": "^1.1.3",
     "rimraf": "^2.6.2",
     "underscore.string": "^3.3.5",
     "webapp-starter-kit": "git+https://git@github.com/fnstack/WebApp-starter-kit.git#0.5",
-    "yeoman-generator": "^3.1.1",
-    "yeoman-welcome": "^1.0.1"
+    "yeoman-generator": "^3.1.1"
   }
 }
