--- a/app/templates/tsconfig.json
+++ b/app/templates/tsconfig.json
@@ -7,7 +7,16 @@
     "outDir": "build",
     "module": "esnext",
     "target": "es6",
-    "lib": ["es2016", "es2018", "esnext", "dom", "dom.iterable", "scripthost", "esnext.asynciterable","es2018.promise"],
+    "lib": [
+      "es2016",
+      "es2018",
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost",
+      "esnext.asynciterable",
+      "es2018.promise"
+    ],
     "sourceMap": true,
     "inlineSourceMap": false,
     "inlineSources": false,
@@ -16,9 +25,9 @@
     "noUnusedLocals": true,
     "jsx": "react",
     "moduleResolution": "node",
-    "importHelpers":true,
+    "importHelpers": true,
     "noImplicitAny": false,
-    "esModuleInterop":true
+    "esModuleInterop": true
   },
   "include": ["**/*"],
   "exclude": ["node_modules", "build", "dist", "typings/main", "typings/main.d.ts"],
