--- a/app/templates/.eslintrc.json
+++ b/app/templates/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "root": true,
-  "extends": ["eslint:recommended"],
+  "extends": [
+    "eslint:recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 7,
     "sourceType": "module"
