--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-web-app-fnstack",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.0",
   "description": "Yeoman generator for web front-end projects (React, react-apollo, Typescript, Webpack).",
   "repository": {
     "type": "git",
@@ -31,19 +31,19 @@
     "lint": "esw --color"
   },
   "dependencies": {
-    "chalk": "^2.4.1",
-    "eslint": "^5.10.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-watch": "^4.0.2",
-    "husky": "^1.2.1",
-    "lint-staged": "^8.1.0",
+    "chalk": "^2.4.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-watch": "^5.1.2",
+    "husky": "^2.1.0",
+    "lint-staged": "^8.1.5",
     "ncp": "^2.0.0",
-    "prettier": "^1.15.3",
-    "replace-in-files": "^1.1.3",
-    "rimraf": "^2.6.2",
+    "prettier": "^1.17.0",
+    "replace-in-files": "^1.1.4",
+    "rimraf": "^2.6.3",
     "underscore.string": "^3.3.5",
-    "webapp-starter-kit": "git+https://git@github.com/fnstack/WebApp-starter-kit.git#0.5",
-    "yeoman-generator": "^3.1.1"
+    "webapp-starter-kit": "git+https://git@github.com/fnstack/WebApp-starter-kit.git#0.6",
+    "yeoman-generator": "^3.2.0"
   },
   "lint-staged": {
     "*.js": [
