--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-web-app-fnstack",
-  "version": "0.1.1-beta.0",
+  "version": "0.1.1-beta.1",
   "description": "Yeoman generator for web front-end projects (React, react-apollo, Typescript, Webpack).",
   "repository": {
     "type": "git",
@@ -42,14 +42,14 @@
     "replace-in-files": "^1.1.4",
     "rimraf": "^2.6.3",
     "underscore.string": "^3.3.5",
-    "webapp-starter-kit": "git+https://git@github.com/fnstack/WebApp-starter-kit.git#0.6",
+    "webapp-starter-kit": "git+https://git@github.com/fnstack/WebApp-starter-kit.git",
     "yeoman-generator": "^3.2.0"
   },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
       "prettier --write",
-      "esw --ext ",
+      "esw --color",
       "git add"
     ]
   },
