🐛 Fix issues on build script.
Squashed commits:

[f37e5a1] 0.1.1-0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-web-app-fnstack",
-  "version": "0.1.0",
+  "version": "0.1.1-0",
   "description": "Yeoman generator for web front-end projects (React, react-apollo, Typescript, Webpack).",
   "repository": {
     "type": "git",
